[package]
name = "msgboard"
version = "0.1.0"
authors = ["laputa <shinemotec@gmail.com>"]

[dependencies]
rocket = "0.3.15"
rocket_codegen = "0.3.15"
rocket_contrib = "0.3.15"
diesel = { version = "1.3.0", features = ["mysql",  "chrono"] }
dotenv = "0.9.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
chrono = "0.4"
